[workspace]
members = [
    "examples/list_access_points",
    "examples/list_devices",
    "examples/show_wifi_networks",
    "examples/simple",
    "examples/wifi_access_points",
    "examples/wifi_active_ap",
    "examples/wifi_info",
]

[package]
name = "rusty_network_manager"
description = "A crate for interacting with network_manager using zbus"
version = "0.5.3"
edition = "2021"
license = "MIT"
homepage = "https://github.com/KevinVoell/network_manager"
repository = "https://github.com/KevinVoell/network_manager"
readme = "README.md"
keywords = ["network_manager", "networking", "zbus"]
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "4.1.1"
bitflags = "2"

[features]
default = ["full"]
full = [
    "access_point",
    "active",
    "adsl",
    "agent_manager",
    "bluetooth",
    "bond",
    "bridge",
    "checkpoint",
    "connection",
    "device",
    "dhcp4config",
    "dhcp6config",
    "dummy",
    "generic",
    "hsr",
    "infiniband",
    "ip4config",
    "ip6config",
    "iptunnel",
    "loopback",
    "lowpan",
    "macsec",
    "macvlan",
    "modem",
    "nsp",
    "olpc_mesh",
    "ovs_bridge",
    "ovs_interface",
    "ovs_port",
    "plugin",
    "ppp",
    "secret_agent",
    "settings",
    "statistics",
    "team",
    "tun",
    "verth",
    "veth",
    "vlan",
    "vrf",
    "vxlan",
    "wi_max",
    "wifi_p2p",
    "wifi_p2ppeer",
    "wire_guard",
    "wireless",
    "wired",
    "wpan",
]

access_point = []
active = []
adsl = []
agent_manager = []
bluetooth = []
bond = []
bridge = []
checkpoint = []
connection = []
device = []
dhcp4config = []
dhcp6config = []
dummy = []
generic = []
hsr = []
infiniband = []
ip4config = []
ip6config = []
iptunnel = []
loopback = []
lowpan = []
macsec = []
macvlan = []
modem = []
nsp = []
olpc_mesh = []
ovs_bridge = []
ovs_interface = []
ovs_port = []
plugin = []
ppp = []
secret_agent = []
settings = []
statistics = []
team = []
tun = []
verth = []
veth = []
vlan = []
vrf = []
vxlan = []
wi_max = []
wifi_p2p = []
wifi_p2ppeer = []
wire_guard = []
wireless = []
wired = []
wpan = []
