[package]
name = "wifi_active_ap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
network_manager = { version = "0.1.0", path = "../../../network_manager", features=["device", "wireless", "access_point"] }
tokio = { version = "1.36.0", features = ["full"] }
zbus = "4.1.2"